# material-segmentation

./: .gitignore  README.md  pyproject.toml
notebooks/: inference.ipynb  segmentation.ipynb
rsms/: conf.py  test.py  train.py
rsms/dataloaders/: __init__.py
rsms/dataloaders/datasets/: kitti_advanced.py
rsms/modeling/rmsnet/: rmsnet.py  samixer.py  segformer_encoder.py
rsms/utils/: lr_scheduler.py
